Changes in version 0.1.2.4-alpha - 2006-11-??
  o Minor features
    - Add breakdown of public key operations to dumped statistics.

  o Major bugfixes
    - Handle TransPort connections even when the server sends data before
      the client sends data.  Previously, the connection would just hang
      until the client sent data. (Patch from tup based on patch from
      Zajcev Evgeny.)

  o Minor bugfixes
    - Don't log spurious warnings when we see a circuit close reason we
      don't recognize; it's probably just from a newer version of Tor.
    - Have directory authorities allow larger amounts of drift in uptime
      without replacing the server descriptor: previously, a server that
      restarted every 30 minutes could have 48 "interesting" descriptors
      per day.
    - Start linking to the Tor specification and Tor reference manual
      correctly in the Windows installer.
    - Avoid assert failure when our cached-routers file is empty on
      startup.


Changes in version 0.1.2.3-alpha - 2006-10-29
  o Minor features:
    - Prepare for servers to publish descriptors less often: never
      discard a descriptor simply for being too old until either it is
      recommended by no authorities, or until we get a better one for
      the same router. Make caches consider retaining old recommended
      routers for even longer.
    - If most authorities set a BadExit flag for a server, clients
      don't think of it as a general-purpose exit. Clients only consider
      authorities that advertise themselves as listing bad exits.
    - Directory servers now provide 'Pragma: no-cache' and 'Expires'
      headers for content, so that we can work better in the presence of
      caching HTTP proxies.
    - Allow authorities to list nodes as bad exits by fingerprint or by
      address.

  o Minor features, controller:
    - Add a REASON field to CIRC events; for backward compatibility, this