@@ -1304,6 +1304,34 @@ fetch_from_buf_line(buf_t *buf, char *data_out, size_t *data_len)
   return 1;
 }
 
+/** Try to read a single LF-terminated line from <b>buf</b>, and write it,
+ * NUL-terminated, into the *<b>data_len</b> byte buffer at <b>data_out</b>.
+ * Set *<b>data_len</b> to the number of bytes in the line, not counting the
+ * terminating NUL.  Return 1 if we read a whole line, return 0 if we don't
+ * have a whole line yet, and return -1 if the line length exceeds
+ *<b>data_len</b>.
+ */
+int
+fetch_from_buf_line_lf(buf_t *buf, char *data_out, size_t *data_len)
+{
+  char *cp;
+  size_t sz;
+
+  size_t remaining = buf->datalen - _buf_offset(buf,buf->cur);
+  cp = find_char_on_buf(buf, buf->cur, remaining, '\n');
+  if (!cp)
+    return 0;
+  sz = _buf_offset(buf, cp);
+  if (sz+2 > *data_len) {
+    *data_len = sz+2;
+    return -1;
+  }
+  fetch_from_buf(data_out, sz+1, buf);
+  data_out[sz+1] = '\0';
+  *data_len = sz+1;
+  return 1;
+}
+
 /** Compress on uncompress the <b>data_len</b> bytes in <b>data</b> using the
  * zlib state <b>state</b>, appending the result to <b>buf</b>.  If
  * <b>done</b> is true, flush the data in the state and finish the
